# smart_battery_driver

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: lint.yml  test.yml
include/smart_battery_driver/: sbs.hpp  visibility_control.h
src/: sbs.cpp  smart_battery_driver.cpp
